# lapki-compiler

./: .flake8  .gitignore  Arduino.json  Berloga.graphml  Berloga.json  MANIFEST.in  README.md  build.bat  client.py  default.nix  derivation.nix  flake.nix  lapki-compiler.spec  pyproject.toml  pyrightconfig.json  requirements.txt  setup.py  test.py
.github/: typecheck.yml
.github/workflows/: format.yml  pytest.yml  typecheck.yml
Examples/: ExampleRequestSM.json  NewSchema.json
compiler/: CGML.py  CJsonParser.py  Client.py  Compiler.py  GraphmlParser.py  JsonConverter.py  Logger.py  PlatformManager.py  RequestError.py  SourceFile.py  Timer.py  __init__.py  __main__.py  access_controller.py  cjson_parser.py  component.py  config.py  dependencies_resolver.py  graphml_parser.py  handler.py  json_converter.py  logger.py  main.py  main_handler.py  platform_handler.py  platform_manager.py  raw_compilation.py  request_error.py  routes.py  utils.py
compiler/fullgraphmlparser/: .gitignore  __init__.py  circular_consistency_test.py  graphml_to_cpp.py  stateclasses.py
compiler/fullgraphmlparser/templates/: defer_loop.txt  footer_c.txt  footer_hpp.txt  preamble_c.txt  preamble_h.txt  preamble_hpp.txt
compiler/fullgraphmlparser/testdata/: ability.cpp  ability.h  cheetcodes.txt  main.cpp  service.cpp
compiler/os_commands/: __init__.py  nt.py  os_dependent_commands.py  posix.py
compiler/schemas/: Arduino.json  Autoborder_with_actions.graphml  Berloga.json  berlogaScheme.graphml  berlogaScheme.json
compiler/types/: cgml_scheme.py  common.py  config_types.py  ide_types.py  inner_types.py  new_format_types.py  os_commands_types.py  platform_types.py  ref.py  statemachinevalidator.py  types.py  ws_types.py
examples/: (old)testSchema.json  Berloga.graphml  Berloga.xml  CyberiadaFormat-Autoborder.graphml  CyberiadaFormat-Blinker.graphml  ExampleRequestSM4.json  ExampleRequestSM5.json  ExampleRequestSMArduino.json  ExampleRequestSMWithChilds.json  ExampleResponse.json  IRPCB_LED_EXAMPLE.graphml  NewAutoborder.graphml  NewSchema.json  Usercode.json  choices.graphml  initial_states.graphml  ms-button-all.graphml  ms-lmp-all.graphml  ms-main-all.graphml  ms-mtrx-all.graphml  ms1-btn.graphml  ms1-lmp.graphml  ms1-main.graphml  ms1-mtrx.graphml  mtrx.graphml  newBearloga.graphml  schemaWithId(actual).json  schemaWithId.json  schema_v2.json  stm32.graphml  testAnalogIn.json  testAnalogOut.json  testCounter.json  testDigitalIn.json  testDigitalOut.json  testPWM.json  testSchema.json  testSerial.json  testSerial2.json  testShiftOut.json  (+14 more)
examples/MonoFileExample/: cpp_example.cpp
examples/MultifilesExample/: foo.hpp  main.cpp
examples/bearlogaSchemas/: BearlogaDefend-Autoborder.json  BearlogaDefend-Generator.json  BearlogaDefend-Smoker.json  BearlogaDefend-Stapler.json  Stapler_638331190677085090.graphml
examples/old/: (old)testSchema.json  arduino-blinker.json  testAnalogIn.json  testAnalogOut.json  testCounter.json  testDigitalIn.json  testDigitalOut.json  testPWM.json  testSerial.json  testSerial2.json
examples/old/bearlogaSchemas/: Autoborder.json  Autoborder_638330223036439120.graphml  (+8 more)
src/: Button.cpp  Button.h  Compiler.py  Led.h  biba.cpp  biba.h  handler.py  routes.py  subprocess_learning.py  test.cpp  test.h
src/Compiler/: JsonConverter.py  JsonParser.py  handler.py  main.py
src/Examples/: ExampleResponse.json
src/compiler/: CJsonParser.py  Client.py  Compiler.py  JsonConverter.py  JsonParser.py  StateMachine.py  config.py  handler.py  wrapper.py
src/test/: Client.py  __init__.py  client.py  test_client.py  test_server.py
stm32/: LED.h  main.c  qhsm.h  system.c
test/: __init__.py  client.py  test_cgml.py  test_client.py  test_parser.py  test_platform_inheritance.py  test_platforms.py  test_raw_compilation.py  test_server.py
test/Examples/: ExampleRequestSM5.json
test/test_raw_compilation_project/: Makefile  main.cpp
(+37 files in other folders)
